Update anvilgui dependency version in pom.xml Improve loot handling logic in RealisticVillagers class Expose AIConversationService in RealisticVillagers Ensure Folia compatibility in MainCommand class Add AI enablement check in TalkModeManager Enhance logging and validation in BabyTask Update Java version to 21 and add PaperMC repository Upgrade dependencies and support for new PaperMC API Add BabyTask class functionality and related imports Fix typos in attribute and particle enums Replace switch expressions with if-else for newsletter categorization Improve NPC scheduling for better reliability in Folia environments Correct enchantment names to Bukkit API standards Enhance villager food request logic by fixing profession checking